# FFmpegPlayer

./: .gitignore  readme.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: nv12_fragment_shader.glsl  nv21_fragment_shader.glsl  obj_vertex_shader.glsl  simple_3d_fragment_shader.glsl  skia_fragment_shader.glsl  skia_nv12_fragment_shader.glsl  skia_nv21_fragment_shader.glsl  skia_vertex_shader.glsl  skia_video_fragment_shader.glsl  video_vertex_shader.glsl  yuv_420p_fragment_shader.glsl
app/src/main/assets/macbook/: MacBookPro.mtl
app/src/main/assets/tv/: tv-2.mtl  tv.mtl
app/src/main/cpp/: HYPlayer.cpp
app/src/main/cpp/3d/: Simple3DFilter.cpp  Simple3DFilter.h  SimpleObjFilter.cpp  SimpleObjFilter.h
app/src/main/cpp/app/: HYPlayerApp.cpp  HYPlayerApp.h
app/src/main/cpp/audio/: AudioData.h  HYAudioDecoder.cpp  HYAudioDecoder.h  HYOpenSLPlayer.cpp  HYOpenSLPlayer.h
app/src/main/cpp/base/: AssetManager.cpp  AssetManager.h  native_log.h
app/src/main/cpp/demux/: HYDemuxer.cpp  HYDemuxer.h
app/src/main/cpp/video/: HYOpenGLPlayer.cpp  HYOpenGLPlayer.h  HYVideoDecoder.cpp  HYVideoDecoder.h  IFilter.h  NV12Filter.cpp  NV12Filter.h  NV21Filter.cpp  NV21Filter.h  SkiaFilter.cpp  SkiaFilter.h  SkiaFilterWith3D.cpp  SkiaFilterWith3D.h  VideoData.h  YUV420PFilter.cpp  YUV420PFilter.h
app/src/main/java/com/temple/ffmpegplayer/: HYPlayer.kt  HYPlayerApp.kt  HYPlayerCallback.kt  HYSurfaceView.kt  MainActivity.kt  Utils.kt
app/src/main/jniLibs/ffmpeg/include/: config.h
app/src/main/res/layout/: activity_main.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
